[FIX] web_studio: vertically align dropdowns

--- a/web_studio/static/src/less/mixins.less
+++ b/web_studio/static/src/less/mixins.less
@@ -32,7 +32,7 @@
     }
 }
 
-.o-web-studio-select (@top: 26px, @bottom: 35px) {
+.o-web-studio-select (@top: 29px, @bottom: 37px) {
     position: relative;
 
     select, select:active, select:focus{
