--- a/web_studio/static/src/less/sidebar.less
+++ b/web_studio/static/src/less/sidebar.less
@@ -126,6 +126,7 @@
                     > .o_form_input_dropdown {
                         > .o_dropdown_button {
                             right: 18px;
+                            top: -2px;
                             font-size: 10px;
                             font-family: 'FontAwesome';
                             color: @o-web-studio-text-inactive;
